@@ -1,6 +1,10 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.205 2005/04/05 21:52:51 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.206 2005/04/06 02:44:37 rocket Exp $
+
+  06 Apr 2005; Eric Edgar <rocket@gentoo.org>
+  targets/support/chroot-functions.sh, targets/support/kmerge.sh:
+  Added tests for genkernel >3.2.0
 
   05 Apr 2005; Eric Edgar <rocket@gentoo.org> catalyst:
   Fixed email address
